# EaWSL

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: progress.rs
src-tauri/src/commands/: distro_metadata.rs  long_tasks.rs  mod.rs  settings.rs  test_support.rs
src-tauri/src/commands/shared/: dto.rs  error.rs  mod.rs
src-tauri/src/commands/system/: file_size.rs  filesystem.rs  mod.rs  overview.rs  volume_space.rs
src-tauri/src/commands/wsl/: legacy_install.rs  lifecycle.rs  mod.rs  query.rs  shortcuts.rs  transfer.rs  vhdx_relocation.rs
src-tauri/src/services/: distro_metadata.rs  long_task_history.rs  mod.rs  settings_service.rs
src-tauri/src/services/system/: filesystem.rs  mod.rs  overview.ps1  overview.rs
src-tauri/tests/: command_surface.rs
wsl-core/: Cargo.toml
wsl-core/src/: lib.rs
wsl-core/src/application/: mod.rs
wsl-core/src/application/port/: distro_registry.rs  mod.rs  progress_sink.rs  wsl_cli.rs
wsl-core/src/application/use_case/: lifecycle.rs  mod.rs  query.rs  storage.rs  test_support.rs  transfer.rs
wsl-core/src/domain/: error.rs  mod.rs
wsl-core/src/domain/model/: distro.rs  mod.rs  progress.rs
wsl-core/src/domain/policy/: aggregation.rs  distro.rs  install.rs  mod.rs
wsl-core/src/domain/value/: install.rs  mod.rs  storage.rs
wsl-core/src/infrastructure/: mod.rs
wsl-core/tests/: compile_smoke.rs
wsl-core/tests/fixtures/: README.md
(+111 files in other folders)
