[package]
name = "eawsl-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "eawsl_tauri"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "eawsl-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2.4.2"
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = "0.7.18"
wsl-core = { path = "../wsl-core" }
