[package]
name = "wsl-core"
version = "0.3.0"
edition = "2021"

[lib]
name = "wsl_core"
path = "src/lib.rs"

[dependencies]
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = "0.7"
winreg = "0.52"

[dev-dependencies]
serde_json = "1.0"
